<resources>
    <string name="app_name">SecondChance</string>
    <item name="start_scale" format="float" type="dimen">1.4</item>

    <string name="post">post</string>
    <string name="loading">Loading..</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>

    <string name="birthday">Birthday</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_button_click">Login button clicked</string>
    <string name="signup_button_click">Sign Up button clicked</string>
    <string name="reset_password_button_clicked">Reset Password button clicked</string>
    <string name="empty_username">Empty</string>
    <string name="empty">Empty</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="photo">PHOTO</string>

    <string-array name="user_photos">
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xpf1/t51.2885-15/s306x306/e15/10665483_429615813855717_1490926670_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10891026_694434897342602_1094773634_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10894920_1382218332084671_10354293_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10895429_768163716566132_692639371_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10903214_589111004559561_1485881959_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914479_770066599745785_704061869_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914587_1580079332227764_829762970_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10919231_605000369644967_1578007175_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10932142_330866587116424_1327271556_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10932410_1544715455813452_1107632347_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfp1/t51.2885-15/s306x306/e15/891516_579817258815508_1989379587_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/1922172_719849754801056_911351010_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10914370_1519297625009641_722250486_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903746_368501953321344_2002746420_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903270_1397263717236338_950192395_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903242_441936642627221_576882729_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899295_796858437028648_664655000_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899139_948470841831743_1406659049_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
    </string-array>
    <string name="user_profile_photo">http://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/929118_455075441302693_1605108410_a.jpg</string>
    <string name="type_research_here">type research here</string>
    <string name="EyesColours">Eyes color</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string-array name="Eyes">
        <item>Blue</item>
        <item>Vert</item>
        <item>Marron</item>
        <item>Jaune</item>
    </string-array>
    <string-array name="SkinColour">
        <item>Black</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Brown</item>
    </string-array>
    <string-array name="bodyShape">
        <item>Athletic </item>
        <item>Chubby </item>
        <item>Slim </item>
    </string-array>
    <string name="facebook_app_id">271998153332076</string>
    <string name="fb_login_protocol_scheme">fb150711968906309</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="enter_descprition">enter a ddescprtion</string>

    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="say_something">Say something</string>
    <string name="publish">Publish</string>
    <string name="pending_request">Pending Request</string>
    <string name="jump_to_profil">Jump To profil</string>
    <string name="share_photo">SHARE PHOTO</string>
    <string name="cancel">CANCEL</string>
    <string name="share">Share</string>
    <string name="are_you_sure_you_wanna_delete_this_post">Are you sure you wanna delete this post ?</string>
    <string name="delete">Delete</string>
    <string name="unfollow">Unfollow</string>
    <string name="city">city</string>
    <string name="country">country</string>
    <string name="studies">studies</string>
    <string name="work">work</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="this_is_an_open_beta_of_the_upcoming_social_meeting_app">This is an open beta of the upcoming social meeting app</string>

</resources>
