<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv"
            android:layout_width="292dp"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/are_you_sure_you_wanna_delete_this_post"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/signup_layout"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/divider_color">

                <LinearLayout
                    android:id="@+id/confirm_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:text="@string/forgot_password">

                    <com.esprit.secondchance.customfonts.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/delete"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_big" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/signup_layout"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/divider_color">

                <LinearLayout
                    android:id="@+id/cancel_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:text="@string/forgot_password"

                    >

                    <com.esprit.secondchance.customfonts.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_big" />
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>