<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">


            <!-- username section -->
            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_username" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="username"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>


            <!-- display_name section -->
            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_display_name" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="last name"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>


            <!-- website section -->
            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_emaill" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>


            <!-- description section -->
            <RelativeLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_description" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/description"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>

            <!-- website section -->
            <RelativeLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout4"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_work" />

                <EditText
                    android:id="@+id/work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/work"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout5"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_emaill" />

                <EditText
                    android:id="@+id/studies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/studies"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout6"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_emaill" />

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/country"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout7"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_emaill" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/city"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout8"
                android:text="update"
                android:id="@+id/updateButton"
                />

        </RelativeLayout>


    </ScrollView>
</merge>