<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/back_button"
            android:gravity="center_vertical"
            android:padding="25dp">

            <com.esprit.secondchance.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/user_icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_user" />

                <com.esprit.secondchance.customfonts.MyEditText
                    android:id="@+id/et_work"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/user_icon1"
                    android:background="@android:color/transparent"
                    android:hint="@string/lastname"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/light_text"
                    android:textSize="@dimen/text_size_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_email" />

                <com.esprit.secondchance.customfonts.MyEditText
                    android:id="@+id/et_studies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/email_icon"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/light_text"
                    android:textSize="@dimen/text_size_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/birthday_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/birthday_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_birthday"
                    android:clickable="false"/>

                <com.esprit.secondchance.customfonts.MyTextView
                    android:id="@+id/tv_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/birthday_icon"
                    android:background="@android:color/transparent"
                    android:hint="@string/birthday"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/light_text"
                    android:textSize="@dimen/text_size_medium"
                    android:inputType="date"
                    android:gravity="center_vertical"
                    android:clickable="false"/>

                <LinearLayout
                    android:id="@+id/clickable_country_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_transparent"
                    android:clickable="true"
                    android:orientation="vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>




